portfolio/app/static/app/css/nav.css
.main-nav {
    background-color: var(--nav-container-bg-color);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 40px;
    height: 100%;
}

.main-nav .wrapper {
    background-color: var(--nav-bg-color);

    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.main-nav .wrapper a {
    background-color: transparent;

    height: fit-content;
    padding: 0;
    margin: 10px 0;

    text-decoration: none;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.main-nav .wrapper a::after {
    opacity: 0;
    transition: 0.2s;

    content: attr(data-title);

    background-color: var(--nav-popup-color);
    color: var(--nav-icon-hover-color);
    font-family: 'Pretendard Std Variable';

    border: 1px solid var(--nav-icon-hover-color);
    border-radius: 5px;

    padding: 5px 10px;
    
    position: absolute;
    left: 45px;
}

.main-nav .wrapper a:hover::after {
    opacity: 1;
    transition: 0.2s;
}

.main-nav .wrapper a svg {
    width: 80%;
    
    fill: var(--nav-icon-color);
}

.main-nav .wrapper a svg:hover {
    fill: var(--nav-icon-hover-color);
}

